# tiny-shakespeare-transformer

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py
app/: inference.py  main.py
src/: __init__.py  config.py  model.py  train.py  utils.py
templates/: index.html
