[project]
name = "tiny-shakespeare-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
